<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".RefactorDataUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_head"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@drawable/head_for_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001">

        <TextView
            android:id="@+id/textView_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginLeft="105dp"
            android:text="@string/str_for_profile"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_profile_user_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_profile_cirlce" />

        <TextView
            android:id="@+id/textView_initial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_for_initial"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_profile_user_circle"
            app:layout_constraintEnd_toEndOf="@+id/imageView_profile_user_circle"
            app:layout_constraintStart_toStartOf="@+id/imageView_profile_user_circle"
            app:layout_constraintTop_toTopOf="@+id/imageView_profile_user_circle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_foter"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@drawable/head_authorize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageViewFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:onClick="ClickFooter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39999998"
            app:srcCompat="@drawable/icon_folder"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/imageViewMyBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:onClick="ClickFooter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39999998"
            app:srcCompat="@drawable/icon_book_footer" />

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:onClick="ClickFooter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39999998"
            app:srcCompat="@drawable/icon_profile"
            app:tint="@color/orange_txt" />

        <ImageView
            android:id="@+id/imageViewSearchFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:onClick="ClickFooter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39999998"
            app:srcCompat="@drawable/icon_search" />

        <TextView
            android:id="@+id/textViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/orange_txt"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.905" />

        <TextView
            android:id="@+id/textViewFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folder"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.905" />

        <TextView
            android:id="@+id/textViewSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.905" />

        <TextView
            android:id="@+id/textViewMyBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_book"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.905" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_block"
        android:layout_width="381dp"
        android:layout_height="574dp"
        android:background="@drawable/backfone_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="344dp"
            android:layout_height="68dp"
            android:autofillHints=""
            android:background="@drawable/data_user"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_txt"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22000003" />

        <EditText
            android:id="@+id/editText_surname"
            android:layout_width="344dp"
            android:layout_height="68dp"
            android:autofillHints=""
            android:background="@drawable/data_user"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_txt"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39999998" />

        <EditText
            android:id="@+id/editText_old_pass"
            android:layout_width="344dp"
            android:layout_height="68dp"
            android:autofillHints=""
            android:background="@drawable/data_user"
            android:ems="10"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_txt"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.58000004" />

        <Button
            android:id="@+id/button_reg"
            android:layout_width="344dp"
            android:layout_height="61dp"
            android:text="@string/refactor_data"
            app:backgroundTint="@color/orange_txt"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="344dp"
            android:layout_height="68dp"
            android:autofillHints=""
            android:background="@drawable/data_user"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_txt"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012" />

        <EditText
            android:id="@+id/editText_pass"
            android:layout_width="344dp"
            android:layout_height="68dp"
            android:autofillHints=""
            android:background="@drawable/data_user"
            android:ems="10"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_txt"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.76" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>